Updated search bar color

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
 .search input{
     border: 0;
     outline: 0;
-    background: #40404d;
+    background: #d3d3db;
     color: black;
     height: 60px;
     border-radius: 30px;
