Improved the design and feel

--- a/style.css
+++ b/style.css
@@ -5,20 +5,23 @@
     padding: 0;
     font-family: "Lato", sans-serif;
     box-sizing: border-box;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 body{
-    background-color: #373b61;
+    background-color: #d1cbcb85;
 }
 .card{
     width: 90%;
-    max-width: 470px;
-    background: #44448a;
+    max-width: 500px;
+    height: 500px;
     margin: 50px auto 30px;
     border-radius: 20px;
     padding: 40px 30px;
     text-align: center;
+
+    background-image: url(./Assets/bgd_img.jpg);
+    background-size: 100% 100%;
 }
 
 .search{
@@ -31,29 +34,29 @@ body{
 .search input{
     border: 0;
     outline: 0;
-    background: #d3d3db;
-    color: black;
-    height: 60px;
+    background: transparent;
+    border: 3px solid #000000;
+    height: 50px;
     border-radius: 30px;
     flex: 1;
     margin-right: 15px;
-    font-size: 18px;
+    font-size: 25px;
     text-align: center;
 }
 
 .search button{
     border: 0;
     outline: 0;
-    background: #40404d;
     border-radius: 30px;
-    height: 60px;
-    width: 60px;
+    height: 30px;
+    width: 30px;
+    margin-top: 10px;
     cursor: pointer;
     overflow: hidden;
 }
 
 .search button img{
-    width: 60px;
+    width: 30px;
 }
 
 .weather-icon{
@@ -91,17 +94,26 @@ body{
 
 .humidity, .windy{
     font-size: 20px;
-    margin-top: 40%;
-}
-
-.weather{
-    display: none;
+    font-weight: bolder;
+    margin-top: 25%;
 }
 
 .error{
     text-align: left;
     margin-left: 20px;
     margin-top: 10px;
-    font-size: 10px;
+    font-size: 20px;
     display: none;
 }
+
+@media screen and (max-width: 1000px) {
+    .search input {
+        width: 200px;
+    }
+}
+
+    @media screen and (max-width: 550px) {
+        .search input{
+            width: 200px;
+        }
+    }
